fix: resolve client blue marker coordinates issue

--- a/trustasitter-frontend/index.html
+++ b/trustasitter-frontend/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TrustaSitter</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVW-pAsL7J590t7Y1uM8Y4tlcNvSdy0O4&libraries=places"></script>
   </head>
   <body>
     <div id="root"></div>
